TMDM-9958:Implement the IMDMService to return the SSLContext

--- a/main/plugins/org.talend.mdm.repository/plugin.xml
+++ b/main/plugins/org.talend.mdm.repository/plugin.xml
@@ -650,6 +650,10 @@
             class="org.talend.mdm.repository.core.service.ValidateService"
             serviceId="IValidateService">
       </Service>
+      <Service
+            class="org.talend.mdm.repository.core.service.MDMSSLContextService"
+            serviceId="IMDMService">
+      </Service>
 
    </extension>
    <extension
