TMDM-9780: Removed the library extension point definition which has BSD style.

--- a/main/plugins/org.talend.mdm.workbench/build.properties
+++ b/main/plugins/org.talend.mdm.workbench/build.properties
@@ -42,7 +42,6 @@ bin.excludes = META-INF/lib/activation.jar,\
                META-INF/lib/namespace.jar,\
                META-INF/lib/saaj-api.jar,\
                META-INF/lib/saaj-impl.jar,\
-               META-INF/lib/xsdlib.jar,\
                META-INF/lib/jaas.jar,\
-               META-INF/lib/relaxngDatatype.jar,\
-               META-INF/lib/wsdl4j-1.5.1.jar
+               META-INF/lib/wsdl4j-1.5.1.jar,\
+               META-INF/lib/dtdparser121.jar
